objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <controllingField>Activity__c</controllingField>
            <picklistValues>
                <fullName>Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-on-One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Conference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To-Do</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CampEndDate__c</fullName>
        <label>CampEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CampName__c</fullName>
        <description>This is used for Campaign Activity Report.</description>
        <label>CampName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampStartDate__c</fullName>
        <label>CampStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CampaignId__c</fullName>
        <description>To store Campaign Id</description>
        <inlineHelpText>To store Campaign Id</inlineHelpText>
        <label>CampaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Stage_Name__c</fullName>
        <label>Campaign Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <formula>IF(LEFT(WhoId,3)=&apos;003&apos;,&apos;Prospect&apos;,IF(LEFT(WhoId,3)=&apos;00Q&apos;,&apos;Lead&apos;,&apos;&apos;))</formula>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_in_Minutes__c</fullName>
        <label>Duration in Minutes</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Former_Activity_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Former Activity Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsCampAborted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used for Campaign Activity Report.</description>
        <label>IsCampAborted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCampActive__c</fullName>
        <description>This is used for Campaign Activity Report.</description>
        <formula>AND(Today()&gt;= CampStartDate__c,Today()&lt;= CampEndDate__c ,NOT(ISNULL(CampStartDate__c)), NOT(ISNULL(CampEndDate__c)), IsCampAborted__c=False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCampInProgress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCampActivity__c</fullName>
        <description>To check if the Activity is Realted to Campaign - used in Campaign Activity Report as a filter</description>
        <formula>AND(WhoId!=&apos;&apos;,OR(LEFT(WhatId,3)=&apos;701&apos;,CampaignId__c!=&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCampActivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCampCompleted__c</fullName>
        <description>This is used for Campaign Activity Report.</description>
        <formula>AND(Today()&gt; CampEndDate__c , NOT(ISNULL(CampEndDate__c)),  IsCampAborted__c =False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCampCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsIntroduction__c</fullName>
        <formula>Owner:User.Id  &lt;&gt;  CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsIntroduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_By__c</fullName>
        <label>Last Activity By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Activity__c</fullName>
        <formula>IF(Owner:User.Id=$User.Id, true, false)</formula>
        <label>My Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentCampName__c</fullName>
        <description>This is used for Campaign Activity Report.</description>
        <label>ParentCampName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <picklist>
            <controllingField>Activity__c</controllingField>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up/Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm Literature Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discuss Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regarding__c</fullName>
        <description>Not Used Any more, Subject field is relabeled as Regarding</description>
        <label>Regarding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <inlineHelpText>Please enter a result when changing the status to Completed if task is related to Lead.</inlineHelpText>
        <label>Result</label>
        <picklist>
            <controllingField>Activity__c</controllingField>
            <picklistValues>
                <fullName>Direct Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Message/VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successful - Follow Up Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful - Follow Up Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success - Follow Up Scheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesLogix_Activity_Id__c</fullName>
        <externalId>true</externalId>
        <label>SalesLogix Activity Id</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>